# fishsense-mobile-oceans-2025

./: .gitignore  README.md  future_ideas.md  future_stuff.md  pyproject.toml
scripts/: 00_mount.sh  01_process.ipynb  02_plotting.ipynb  fish_length_prediction.csv
