[project]
name = "2025-07-21-fishsense-mobile-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "label-studio-sdk>=1.0.19",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]
